# cadmium

./: .flooignore  .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  cadmium.service  lighterDM.service
.github/workflows/: rust.yml
config/: cadmium.toml
res/: xsetup.sh
src/: config.rs  dbus.rs  error.rs  login.rs  main.rs  x.rs
src/askpass/: mod.rs  simple.rs
src/displayservers/: mod.rs  x.rs
